external-crates/move/crates/move-compiler/tests/move_check/parser/named_blocks_invalid.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/named_blocks_invalid.move:4:13
  │
4 │         name: {
  │             ^
  │             │
  │             Unexpected ':'
  │             Expected ';'

